# siare

./: .gitignore  Cargo.toml  README.md  package.json
app/frontend/: README.md  elm.json  index.html  index.js  package.json
app/frontend/src/: Main.elm  MapCommands.elm  Util.elm  index.html
app/frontend/src/Styles/: Outdoors.elm
contracts/: Cargo.toml  ccdh-geo.wasm.v1  param.json
contracts/src/: lib.rs
siare-accumulate/: Cargo.toml
siare-app/frontend/: elm.json  index.html  package-lock.json  package.json
siare-app/frontend/elm-stuff/0.19.1/: Icon.elmi  Icon.elmo  Main.elmi  Main.elmo  MapCommands.elmo  Util.elmi
siare-app/frontend/elm-stuff/generated-code/elm-community/elm-test/0.19.1-revision9/: dependencies.44762cf806c35fe293d022866b2416c9e3db309d141388d52e176442be580529.json  dependencies.e58448fc12b0cb336100d27b16d725859a7b67cd176194da7502e1317c4ec95a.json  elm.json
siare-app/frontend/elm-stuff/generated-code/elm-community/elm-test/0.19.1-revision9/elm-stuff/0.19.1/: Main.elmi  Main.elmo  MapCommands.elmi  Modal.elmi  Modal.elmo  Styles-Outdoors.elmi  Styles-Outdoors.elmo  Util.elmo
siare-app/frontend/src/: Icon.elm  Modal.elm
siare-app/frontend/src/assets/css/: styles.css
siare-concordium/: ccdh-geo.wasm.v1  init-parameter.json
siare-core/: Cargo.toml
src/: lib.rs
